;;;; -*- coding: utf-8; -*-
changes in sbcl-1.0.2 relative to sbcl-1.0.1:
  * improvement: experimental support for mach exception handling on
    x86/macos. requires building with :MACH-EXCEPTION-HANDLER feature
    to use.
  * improvement: support for GBK external format.
    (thanks to Chun Tian (binghe))
  * bug fix: an error is signaled for attempts to use READ-SEQUENCE
    for a (SIGNED-BYTE 8) stream and (UNSIGNED-BYTE 8) vector, or vice versa.
    (thanks to Tony Martinez)
  * bug fix: the initforms for DEFMETHOD &AUX parameters are only
    evaluated once (reported by Kevin Reid)

changes in sbcl-1.0.1 relative to sbcl-1.0:
  * new platform: FreeBSD/x86-64, including support for threading.
  * new feature: the compiler stores cross-referencing information
    abount function calls (who-calls), macroexpansion (who-macroexpands)
    and special variables (who-binds, who-sets, who-references) for code
    compiled with (< SPACE 3). This information is available through the
    sb-introspect contrib.
  * new feature: users may subclass SEQUENCE, and have instances of
    these classes interoperate with standard Common Lisp functions if
    a number of methods are defined.  (This feature is experimental
    and the interface subject to change based on feedback from SBCL
    users and the general community)
  * improvement: sb-sprof traces call stacks to an arbitrary depth on
    x86/x86-64, rather than the previous fixed depth of 8
  * improvement: another pthread back-end of mutex "pthread-futex".
  * bug fix: non-ascii command-line arguments are processed correctly 
    (thanks to Yaroslav Kavenchuk)
  * bug fix: non-required arguments were not passed correctly when a method
    defined using DEFMETHOD was called from a mop-generated method using
    CALL-NEXT-METHOD (reported by Pascal Costanza)
  * bug fix: recursion is now permitted in accessors through
    SLOT-UNBOUND.  (reported by Pascal Costanza)