@@ -5,6 +5,8 @@ changes in sbcl-1.0.2 relative to sbcl-1.0.1:
     to use.
   * improvement: support for GBK external format.
     (thanks to Chun Tian (binghe))
+  * improvement: the debugger now displays variables that have been closed
+    over, in code compiled with (DEBUG 2) or higher
   * bug fix: an error is signaled for attempts to use READ-SEQUENCE
     for a (SIGNED-BYTE 8) stream and (UNSIGNED-BYTE 8) vector, or vice versa.
     (thanks to Tony Martinez)
